use ValueType instead of string for parameters