@@ -1,7 +1,6 @@
 package com.dexels.navajo.reactive.mappers;
 
 import com.dexels.immutable.api.ImmutableMessage;
-import com.dexels.navajo.document.Property;
 import com.dexels.navajo.document.stream.DataItem;
 import com.dexels.navajo.document.stream.api.StreamScriptContext;
 import com.dexels.navajo.reactive.api.ReactiveMerger;
@@ -47,12 +46,8 @@ public class Rename implements ReactiveMerger {
 	}
 
 	@Override
-	public Optional<Map<String, String>> parameterTypes() {
-		Map<String,String> r = new HashMap<>();
-		r.put("to", Property.STRING_PROPERTY);
-		r.put("from", Property.STRING_PROPERTY);
-		r.put("condition", Property.BOOLEAN_PROPERTY);
-		return Optional.of(Collections.unmodifiableMap(r));
+	public Optional<Map<String, ImmutableMessage.ValueType>> parameterTypes() {
+		return Optional.of(Map.of("condition", ImmutableMessage.ValueType.BOOLEAN,"to",ValueType.STRING,"from",ValueType.STRING));
 	}
 
 	@Override
