@@ -1,5 +1,6 @@
 package com.dexels.navajo.reactive.transformer.other;
 
+import com.dexels.immutable.api.ImmutableMessage;
 import com.dexels.navajo.document.Property;
 import com.dexels.navajo.document.stream.DataItem;
 import com.dexels.navajo.document.stream.DataItem.Type;
@@ -39,10 +40,8 @@ public class LogTransformerFactory implements ReactiveTransformerFactory {
 	}
 
 	@Override
-	public Optional<Map<String, String>> parameterTypes() {
-		Map<String, String> r = new HashMap<>();
-		r.put("every", Property.INTEGER_PROPERTY);
-		return Optional.of(Collections.unmodifiableMap(r));
+	public Optional<Map<String, ImmutableMessage.ValueType>> parameterTypes() {
+		return Optional.of(Map.of("every", ImmutableMessage.ValueType.INTEGER));
 	}
 
 	@Override
