@@ -1,5 +1,6 @@
 package com.dexels.navajo.reactive.transformer.reduce;
 
+import com.dexels.immutable.api.ImmutableMessage;
 import com.dexels.navajo.document.Property;
 import com.dexels.navajo.document.stream.DataItem.Type;
 import com.dexels.navajo.document.stream.ReactiveParseProblem;
@@ -33,10 +34,8 @@ public class ReduceTransformerFactory implements ReactiveTransformerFactory, Tra
 	}
 
 	@Override
-	public Optional<Map<String, String>> parameterTypes() {
-		Map<String, String> r = new HashMap<>();
-		r.put("debug", Property.BOOLEAN_PROPERTY);
-		return Optional.of(Collections.unmodifiableMap(r));
+	public Optional<Map<String, ImmutableMessage.ValueType>> parameterTypes() {
+		return Optional.of(Map.of("debug", ImmutableMessage.ValueType.BOOLEAN));
 	}
 
 
